fix: review points

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -158,47 +158,51 @@ spec:
             - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
               value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
-              value: "{{ .Values.defaultClearinghouse.baseAddress }}{{ .Values.defaultClearinghouse.apiPath }}"
+              value: "{{ .Values.clearinghouseAddresses.default.baseAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__VALIDATIONPATH"
+              value: "{{ .Values.clearinghouseAddresses.default.apiPath }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
-              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.clientId }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.default.clientId }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "default-clearinghouse-client-secret"
+                  key: "clearinghouse-client-secret-default"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.grantType }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.default.grantType }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
-              value: "{{ .Values.defaultClearinghouse.tokenAddress }}"
+              value: "{{ .Values.clearinghouseAddresses.default.tokenAddress }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.scope }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.default.scope }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.defaultClearinghouse.countryAlpha2Code }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.default.countryAlpha2Code }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__BASEADDRESS"
-              value: "{{ .Values.regionalClearinghouse.china.baseAddress }}{{ .Values.regionalClearinghouse.china.apiPath }}"
+              value: "{{ .Values.clearinghouseAddresses.china.baseAddress }}"
+            - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__VALIDATIONPATH"
+              value: "{{ .Values.clearinghouseAddresses.china.apiPath }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__CLIENTID"
-              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.clientId }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.china.clientId }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__CLIENTSECRET"
               valueFrom:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
-                  key: "china-clearinghouse-client-secret"
+                  key: "clearinghouse-client-secret-china"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__GRANTTYPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.grantType }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.china.grantType }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__TOKENADDRESS"
-              value: "{{ .Values.regionalClearinghouse.china.tokenAddress }}"
+              value: "{{ .Values.clearinghouseAddresses.china.tokenAddress }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__SCOPE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.scope }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.china.scope }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__USERNAME"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__COUNTRYALPHA2CODE"
-              value: "{{ .Values.backend.processesworker.clearinghouse.regionalClearinghouse.china.countryAlpha2Code }}"
+              value: "{{ .Values.backend.processesworker.clearinghouse.china.countryAlpha2Code }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
               value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
             - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS"
