--- a/environments/helm-values/values-int.yaml
+++ b/environments/helm-values/values-int.yaml
@@ -35,16 +35,15 @@ bpnDidResolverAddress: "http://bdrs-bdrs-server:8081"
 dimWrapper:
   baseAddress: "https://dim.int.catena-x.net"
   tokenAddress: "https://centralidp.int.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token"
-decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 clearinghouseAddresses:
   default:
     baseAddress: "https://digitalidcore.test.dih-cloud.com"
     apiPath: "/api/v2/validation"
     tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
   china:
-    baseAddress: "https://ch.bitfactory.cn"
-    apiPath: "/notary/api/v2/validation"
-    tokenAddress: "https://ch.bitfactory.cn/notary/auth/get/accessToken"
+    baseAddress: "https://digitalidcore.test.dih-cloud.com"
+    apiPath: "/api/v2/validation"
+    tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 bpnDidResolver:
   managementApiAddress: "http://bdrs-bdrs-server:8081"
