refactor: allow optional range of clearing houses per country code

--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -74,22 +74,22 @@ spec:
               - name: "BATCHDELETE_DELETEINTERVALINDAYS"
                 value: "{{ .Values.backend.portalmaintenance.batchDelete.days }}"
               - name: "CLEARINGHOUSE__BASEADDRESS"
-                value: "{{ .Values.clearinghouseAddress }}"
+                value: "{{ .Values.clearinghouse.default.baseAddress }}"
               - name: "CLEARINGHOUSE__CLIENTID"
-                value: "{{ .Values.backend.processesworker.clearinghouse.clientId }}"
+                value: "{{ .Values.clearinghouse.default.clientId }}"
               - name: "CLEARINGHOUSE__CLIENTSECRET"
                 valueFrom:
                   secretKeyRef:
                     name: "{{ .Values.backend.interfaces.secret }}"
-                    key: "clearinghouse-client-secret"
+                    key: "clearinghouse-client-secret-default"
               - name: "CLEARINGHOUSE__GRANTTYPE"
-                value: "{{ .Values.backend.processesworker.clearinghouse.grantType }}"
+                value: "{{ .Values.clearinghouse.default.grantType }}"
               - name: "CLEARINGHOUSE__TOKENADDRESS"
-                value: "{{ .Values.clearinghouseTokenAddress }}"
+                value: "{{ .Values.clearinghouse.default.tokenAddress }}"
               - name: "CLEARINGHOUSE__PASSWORD"
                 value: "{{ .Values.backend.placeholder }}"
               - name: "CLEARINGHOUSE__SCOPE"
-                value: "{{ .Values.backend.processesworker.clearinghouse.scope }}"
+                value: "{{ .Values.clearinghouse.default.scope }}"
               - name: "CLEARINGHOUSE__USERNAME"
                 value: "{{ .Values.backend.placeholder }}"
               - name: "CLEARINGHOUSE__CALLBACKURL"
