--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -120,51 +120,53 @@ spec:
         - name: "APPLICATIONCHECKLIST__BPDM__BUSINESSPARTNERPOOLBASEADDRESS"
           value: "{{ .Values.bpdm.poolAddress }}{{ .Values.bpdm.poolApiPath }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
-          value: "{{ .Values.clearinghouseAddresses.default.baseAddress }}"
+          value: "{{ .Values.clearinghouse.default.baseAddress }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__VALIDATIONPATH"
-          value: "{{ .Values.clearinghouseAddresses.default.apiPath }}"
+          value: "{{ .Values.clearinghouse.default.apiPath }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
-          value: "{{ .Values.backend.processesworker.clearinghouse.default.clientId }}"
+          value: "{{ .Values.clearinghouse.default.clientId }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
               name: "{{ .Values.backend.interfaces.secret }}"
               key: "clearinghouse-client-secret-default"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.default.grantType }}"
+          value: "{{ .Values.clearinghouse.default.grantType }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
-          value: "{{ .Values.clearinghouseAddresses.default.tokenAddress }}"
+          value: "{{ .Values.clearinghouse.default.tokenAddress }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.default.scope }}"
+          value: "{{ .Values.clearinghouse.default.scope }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.default.countryAlpha2Code }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__BASEADDRESS"
-          value: "{{ .Values.clearinghouseAddresses.china.baseAddress }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__VALIDATIONPATH"
-          value: "{{ .Values.clearinghouseAddresses.china.apiPath }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__CLIENTID"
-          value: "{{ .Values.backend.processesworker.clearinghouse.china.clientId }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__CLIENTSECRET"
+          value: "{{ .Values.clearinghouse.default.countryAlpha2Code }}"
+        {{- range $index, $clearingHouseByCountryCode := .Values.clearinghouse.regional }}
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__BASEADDRESS"
+          value: "{{ $clearingHouseByCountryCode.baseAddress }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__VALIDATIONPATH"
+          value: "{{ $clearingHouseByCountryCode.apiPath }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLIENTID"
+          value: "{{ $clearingHouseByCountryCode.clientId }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__CLIENTSECRET"
           valueFrom:
             secretKeyRef:
-              name: "{{ .Values.backend.interfaces.secret }}"
-              key: "clearinghouse-client-secret-china"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__GRANTTYPE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.china.grantType }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__TOKENADDRESS"
-          value: "{{ .Values.clearinghouseAddresses.china.tokenAddress }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__PASSWORD"
-          value: "{{ .Values.backend.placeholder }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__SCOPE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.china.scope }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__USERNAME"
-          value: "{{ .Values.backend.placeholder }}"
-        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__0__COUNTRYALPHA2CODE"
-          value: "{{ .Values.backend.processesworker.clearinghouse.china.countryAlpha2Code }}"
+              name: "{{ $.Values.backend.interfaces.secret }}"
+              key: "clearinghouse-client-secret-{{ $index }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__GRANTTYPE"
+          value: "{{ $clearingHouseByCountryCode.grantType }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__TOKENADDRESS"
+          value: "{{ $clearingHouseByCountryCode.tokenAddress }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__PASSWORD"
+          value: "{{ $.Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__SCOPE"
+          value: "{{ $clearingHouseByCountryCode.scope }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__USERNAME"
+          value: "{{ $.Values.backend.placeholder }}"
+        - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__REGIONALCLEARINGHOUSECREDENTIALS__{{ $index }}__COUNTRYALPHA2CODE"
+          value: "{{ $clearingHouseByCountryCode.countryAlpha2Code }}"
+        {{- end }}
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__CALLBACKURL"
           value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}" 
         - name: "APPLICATIONCHECKLIST__CLEARINGHOUSE__RETRIGGERENCLEARINGHOUSEINTERVALINDAYS"
