--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -33,8 +33,10 @@ data:
   # use data map instead of stringData to prevent base64 encoding of already base64-encoded existing value from secret
   # use index function for secret keys with hyphen otherwise '$secret.data.secretKey' works too
   bpdm-client-secret: {{ coalesce ( .Values.backend.processesworker.bpdm.clientSecret | b64enc ) ( index $secret.data "bpdm-client-secret" ) | default ( randAlphaNum 32 ) | quote }}
-  clearinghouse-client-secret-default: {{ coalesce ( .Values.backend.processesworker.clearinghouse.default.clientSecret | b64enc ) ( index $secret.data "clearinghouse-client-secret-default" ) | default ( randAlphaNum 32 ) | quote }}
-  clearinghouse-client-secret-china: {{ coalesce ( .Values.backend.processesworker.clearinghouse.china.clientSecret | b64enc ) ( index $secret.data "clearinghouse-client-secret-china" ) | default ( randAlphaNum 32 ) | quote }}
+  clearinghouse-client-secret-default: {{ coalesce ( .Values.clearinghouse.default.clientSecret | b64enc ) ( index $secret.data "clearinghouse-client-secret-default" ) | default ( randAlphaNum 32 ) | quote }}
+  {{ range $index, $clearingHouseByCountryCode := .Values.clearinghouse.regional }}
+  clearinghouse-client-secret-{{ $index }}: {{ coalesce ( $clearingHouseByCountryCode.clientSecret | b64enc ) ( index $secret.data ( printf "clearinghouse-client-secret-%s" $index ) ) | default ( randAlphaNum 32 ) | quote }}
+  {{ end }}
   custodian-client-secret: {{ coalesce ( .Values.backend.processesworker.custodian.clientSecret | b64enc ) ( index $secret.data "custodian-client-secret" ) | default ( randAlphaNum 32 ) | quote }}
   sdfactory-client-secret: {{ coalesce ( .Values.backend.processesworker.sdfactory.clientSecret | b64enc ) ( index $secret.data "sdfactory-client-secret" ) | default ( randAlphaNum 32 ) | quote }}
   offerprovider-client-secret: {{ coalesce ( .Values.backend.processesworker.offerprovider.clientSecret | b64enc ) ( index $secret.data "offerprovider-client-secret" ) | default ( randAlphaNum 32 ) | quote }}
@@ -51,8 +53,10 @@ data:
 stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
   bpdm-client-secret: {{ .Values.backend.processesworker.bpdm.clientSecret | default ( randAlphaNum 32 ) | quote }}
-  clearinghouse-client-secret-default: {{ .Values.backend.processesworker.clearinghouse.default.clientSecret | default ( randAlphaNum 32 ) | quote }}
-  clearinghouse-client-secret-china: {{ .Values.backend.processesworker.clearinghouse.china.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  clearinghouse-client-secret-default: {{ .Values.clearinghouse.default.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  {{ range $index, $clearingHouseByCountryCode := .Values.clearinghouse.regional }}
+  clearinghouse-client-secret-{{ $index }}: {{ $clearingHouseByCountryCode.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  {{ end }}
   custodian-client-secret: {{ .Values.backend.processesworker.custodian.clientSecret | default ( randAlphaNum 32 ) | quote }}
   sdfactory-client-secret: {{ .Values.backend.processesworker.sdfactory.clientSecret | default ( randAlphaNum 32 ) | quote }}
   offerprovider-client-secret: {{ .Values.backend.processesworker.offerprovider.clientSecret | default ( randAlphaNum 32 ) | quote }}
