--- a/environments/helm-values/values-int.yaml
+++ b/environments/helm-values/values-int.yaml
@@ -35,15 +35,22 @@ bpnDidResolverAddress: "http://bdrs-bdrs-server:8081"
 dimWrapper:
   baseAddress: "https://dim.int.catena-x.net"
   tokenAddress: "https://centralidp.int.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token"
-clearinghouseAddresses:
+clearinghouse:
   default:
     baseAddress: "https://digitalidcore.test.dih-cloud.com"
     apiPath: "/api/v2/validation"
     tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
-  china:
-    baseAddress: "https://digitalidcore.test.dih-cloud.com"
-    apiPath: "/api/v2/validation"
-    tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
+    clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
+    clientSecret: "<path:portal/data/int/clearinghouse#default-client-secret>"
+  regional:
+    - countryAlpha2Code: "CN"
+      baseAddress: "https://digitalidcore.test.dih-cloud.com"
+      apiPath: "/api/v2/validation"
+      clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
+      clientSecret: "<path:portal/data/int/clearinghouse#china-client-secret>"
+      tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
+      scope: "openid"
+      grantType: "client_credentials"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 bpnDidResolver:
   managementApiAddress: "http://bdrs-bdrs-server:8081"
@@ -244,13 +251,6 @@ backend:
     bpdm:
       clientId: "<path:portal/data/portal-iam-clientIds#bpdm-client-id>"
       clientSecret: "<path:portal/data/int/iam/centralidp-client-secrets#portal-bpdm-sa>"
-    clearinghouse:
-      default:
-        clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
-        clientSecret: "<path:portal/data/int/clearinghouse#default-client-secret>"
-      china:
-        clientId: "<path:portal/data/int/clearinghouse#china-client-id>"
-        clientSecret: "<path:portal/data/int/clearinghouse#china-client-secret>"
     custodian:
       clientId: "<path:portal/data/portal-iam-clientIds#custodian-client-id>"
       clientSecret: "<path:portal/data/int/iam/centralidp-client-secrets#custodian-sa>"
