--- a/environments/helm-values/values-stable.yaml
+++ b/environments/helm-values/values-stable.yaml
@@ -61,17 +61,17 @@ frontend:
       - host: "portal.stable.catena-x.net"
         paths:
           - path: "/(.*)"
-            pathType: "Prefix"
+            pathType: "ImplementationSpecific"
             backend:
               service: "portal"
               port: 8080
           - path: "/registration/(.*)"
-            pathType: "Prefix"
+            pathType: "ImplementationSpecific"
             backend:
               service: "registration"
               port: 8080
           - path: "/((assets|documentation)/.*)"
-            pathType: "Prefix"
+            pathType: "ImplementationSpecific"
             backend:
               service: "assets"
               port: 8080
