chore(values): clean up vault path for int and stable

--- a/environments/helm-values/values-stable.yaml
+++ b/environments/helm-values/values-stable.yaml
@@ -40,17 +40,8 @@ clearinghouse:
     baseAddress: "https://validation.test.dih-cloud.com"
     apiPath: "/api/v1/validation"
     tokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
-    clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
-    clientSecret: "<path:portal/data/int/clearinghouse#default-client-secret>"
-  regional:
-    - countryAlpha2Code: "CN"
-      baseAddress: "https://digitalidcore.test.dih-cloud.com"
-      apiPath: "/api/v2/validation"
-      clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
-      clientSecret: "<path:portal/data/int/clearinghouse#china-client-secret>"
-      tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
-      scope: "openid"
-      grantType: "client_credentials"
+    clientId: "<path:portal/data/stable/clearinghouse#client-id>"
+    clientSecret: "<path:portal/data/stable/clearinghouse#client-secret>"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 bpnDidResolver:
   managementApiAddress: "http://bdrs-bdrs-server:8081"
