--- a/environments/helm-values/values-int.yaml
+++ b/environments/helm-values/values-int.yaml
@@ -40,14 +40,14 @@ clearinghouse:
     baseAddress: "https://digitalidcore.test.dih-cloud.com"
     apiPath: "/api/v2/validation"
     tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
-    clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
-    clientSecret: "<path:portal/data/int/clearinghouse#default-client-secret>"
+    clientId: "<path:portal/data/int/clearinghouse#client-id>"
+    clientSecret: "<path:portal/data/int/clearinghouse#client-secret>"
   regional:
-    - countryAlpha2Code: "CN"
+    - countryAlpha2Code: "FR"
       baseAddress: "https://digitalidcore.test.dih-cloud.com"
       apiPath: "/api/v2/validation"
-      clientId: "<path:portal/data/int/clearinghouse#default-client-id>"
-      clientSecret: "<path:portal/data/int/clearinghouse#china-client-secret>"
+      clientId: "<path:portal/data/int/clearinghouse#client-id-0>"
+      clientSecret: "<path:portal/data/int/clearinghouse#client-secret-0>"
       tokenAddress: "https://iam.test.dih-cloud.com/realms/development/protocol/openid-connect/token"
       scope: "openid"
       grantType: "client_credentials"
