--- a/environments/helm-values/values-stable.yaml
+++ b/environments/helm-values/values-stable.yaml
@@ -30,18 +30,13 @@ bpdm:
   portalGateApiPath: "/companies/test-company/v6"
 custodianAddress: "https://managed-identity-wallets-new.stable.catena-x.net"
 sdfactoryAddress: "https://sdfactory.stable.catena-x.net"
+clearinghouseAddress: "https://validation.test.dih-cloud.com"
+clearinghouseTokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
 issuerComponentAddress: "https://ssi-credential-issuer.stable.catena-x.net"
 bpnDidResolverAddress: "http://bdrs-bdrs-server:8081"
 dimWrapper:
   baseAddress: "https://dim.stable.catena-x.net"
   tokenAddress: "https://centralidp.stable.catena-x.net/auth/realms/CX-Central/protocol/openid-connect/token"
-clearinghouse:
-  default:
-    baseAddress: "https://validation.test.dih-cloud.com"
-    apiPath: "/api/v1/validation"
-    tokenAddress: "https://iam.test.dih-cloud.com/realms/carla/protocol/openid-connect/token"
-    clientId: "<path:portal/data/stable/clearinghouse#client-id>"
-    clientSecret: "<path:portal/data/stable/clearinghouse#client-secret>"
 decentralIdentityManagementAuthAddress: "https://dis-integration-service-prod.eu10.dim.cloud.sap/api/v2.0.0/iatp/catena-x-portal"
 bpnDidResolver:
   managementApiAddress: "http://bdrs-bdrs-server:8081"
@@ -243,6 +238,9 @@ backend:
       clientId: "<path:portal/data/portal-iam-clientIds#bpdm-client-id>"
       clientSecret: "<path:portal/data/stable/iam/centralidp-client-secrets#portal-bpdm-sa>"
       startSharingStateAsReady: false
+    clearinghouse:
+      clientId: "<path:portal/data/stable/clearinghouse#client-id>"
+      clientSecret: "<path:portal/data/stable/clearinghouse#client-secret>"
     custodian:
       clientId: "<path:portal/data/portal-iam-clientIds#custodian-client-id>"
       clientSecret: "<path:portal/data/stable/iam/centralidp-client-secrets#custodian-sa>"
