fix: adjusted the maintenance template

--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -73,29 +73,31 @@ spec:
                 value: "{{ .Values.backend.portalmaintenance.processIdentity.processUserId }}"
               - name: "BATCHDELETE_DELETEINTERVALINDAYS"
                 value: "{{ .Values.backend.portalmaintenance.batchDelete.days }}"
-              - name: "CLEARINGHOUSE__BASEADDRESS"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__BASEADDRESS"
                 value: "{{ .Values.clearinghouse.default.baseAddress }}"
-              - name: "CLEARINGHOUSE__CLIENTID"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__VALIDATIONPATH"
+                value: "{{ .Values.clearinghouse.default.apiPath }}"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTID"
                 value: "{{ .Values.clearinghouse.default.clientId }}"
-              - name: "CLEARINGHOUSE__CLIENTSECRET"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__CLIENTSECRET"
                 valueFrom:
                   secretKeyRef:
                     name: "{{ .Values.backend.interfaces.secret }}"
                     key: "clearinghouse-client-secret-default"
-              - name: "CLEARINGHOUSE__GRANTTYPE"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__GRANTTYPE"
                 value: "{{ .Values.clearinghouse.default.grantType }}"
-              - name: "CLEARINGHOUSE__TOKENADDRESS"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__TOKENADDRESS"
                 value: "{{ .Values.clearinghouse.default.tokenAddress }}"
-              - name: "CLEARINGHOUSE__PASSWORD"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__PASSWORD"
                 value: "{{ .Values.backend.placeholder }}"
-              - name: "CLEARINGHOUSE__SCOPE"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__SCOPE"
                 value: "{{ .Values.clearinghouse.default.scope }}"
-              - name: "CLEARINGHOUSE__USERNAME"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__USERNAME"
                 value: "{{ .Values.backend.placeholder }}"
+              - name: "CLEARINGHOUSE__DEFAULTCLEARINGHOUSECREDENTIALS__COUNTRYALPHA2CODE"
+                value: "{{ .Values.clearinghouse.default.countryAlpha2Code }}"
               - name: "CLEARINGHOUSE__CALLBACKURL"
                 value: "{{ .Values.portalBackendAddress }}{{ .Values.backend.processesworker.clearinghouse.callbackPath }}"
-              - name: "CLEARINGHOUSE__USEDIMWALLET"
-                value: "{{ .Values.backend.useDimWallet }}"
               - name: "CLEARINGHOUSE__RETRIGGERENDCLEARINGHOUSEINTERVALINDAYS"
                 value: "{{ .Values.backend.processesworker.clearinghouse.retriggerEndClearinghouseIntervalInDays }}"
               - name: "SERILOG__MINIMUMLEVEL__Default"
